--- a/security.html
+++ b/security.html
@@ -39,6 +39,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.lever.co/deltadental/431322d3-c670-4027-b89e-14d3764a1888'>Delta Dental - Security Incident Response Engineer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
 <h5><a href='https://www.xero.com/about/careers/job/6a7a1ae26079c5b5f9a45c01409edbbd4f61499393061e619886f036fdb98401/'>Security Architect - Technology | Xero </a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
@@ -55,11 +59,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/clear/jobs/1940466'>Job Application for  Senior Security Engineer at CLEAR - Corporate</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/clear/jobs/1940466'>Job Application for  Senior Security Engineer at CLEAR - Corporate</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/vibrenthealth/job/og9sbfwM'>Vibrent Health Careers - Sr. Security Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/vibrenthealth/job/og9sbfwM'>Vibrent Health Careers - Sr. Security Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -111,6 +115,11 @@
 <p><span class="badge badge-light">Indianapolis, IN Indianapolis, Indiana</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
+<h5><a href='https://boards.greenhouse.io/casper/jobs/1933230?gh_jid=1933230'>Job Application for Security Engineer at Casper</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>6 days ago ... Promote security within Casper; Architect, deploy, and support security-focused 
+tools and services; Work closely with developers to give advice on secure?...</p>
+<hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qb59Vfw4&k=Job&j=o7Qrbfwj&__jvst=Employee+Referral&__jvsd=s3MBsgwD&__jvsc=Twitter&bid=n6zToMwd'>Infoblox Careers - Cyber Security Engineer</a></h5> 
 <p><span class="badge badge-light">Burnaby</span></p>
 <p>Posted on:: 2019-10-30</p>
@@ -143,7 +152,7 @@
 <p><span class="badge badge-light">Cambridge, UK  Cambridge</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qoZ9Vfwb&k=Job&j=oY5QafwN&__jvst=Employee+Referral&__jvsd=seBixgwp&__jvsc=Twitter&bid=nTproMwo'>Imperva Careers - Cloud Security - Managed Services Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qoZ9Vfwb&k=Job&j=oY5QafwN&__jvst=Employee+Referral&__jvsd=seBixgwp&__jvsc=Twitter&bid=nTproMwo'>Imperva Careers - Cloud Security - Managed Services Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -188,7 +197,7 @@ to be ?baked in? to a system architecture, but you actually know how to bake it 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/crowdstrike/job/o9kjbfwH'>CrowdStrike Careers - Security Analyst, Falcon Complete</a></h5> 
+<h5><a href='https://jobs.jobvite.com/crowdstrike/job/o9kjbfwH'>CrowdStrike Careers - Security Analyst, Falcon Complete</a></h5> 
 <p><span class="badge badge-light">Sydney Australia</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -236,11 +245,11 @@ to be ?baked in? to a system architecture, but you actually know how to bake it 
 <p><span class="badge badge-light">Orlando, FL, USA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='http://west4thstrategy.applytojob.com/apply/VD9A4J8CeX/Cloud-Security-Engineer-Architect'>Cloud Security Engineer / Architect - West 4th Strategy - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://west4thstrategy.applytojob.com/apply/VD9A4J8CeX/Cloud-Security-Engineer-Architect'>Cloud Security Engineer / Architect - West 4th Strategy - Career Page</a></h5> 
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://acrisure.applytojob.com/apply/zNuAOnDJJX/Security-Automation-Engineer'>Security Automation Engineer - Acrisure LLC - Career Page</a></h5> 
+<h5><a href='http://acrisure.applytojob.com/apply/zNuAOnDJJX/Security-Automation-Engineer'>Security Automation Engineer - Acrisure LLC - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -256,7 +265,7 @@ to be ?baked in? to a system architecture, but you actually know how to bake it 
 <p><span class="badge badge-light">Portland, OR</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/AthenPolloLLC/743999698402657-sr-cyber-security-principal-engineer'>AthenPollo LLC Sr Cyber Security Principal Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AthenPolloLLC/743999698402657-sr-cyber-security-principal-engineer'>AthenPollo LLC Sr Cyber Security Principal Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Portland, OR</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -282,7 +291,7 @@ vida de milhares de usu?rios. Acreditamos em ambientes ?geis,?...</p>
 <p><span class="badge badge-light">Austin, Texas</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/vgs/7eed1a68-cf63-4b1a-9bc1-2c20793fd704'>Very Good Security - Junior Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/vgs/7eed1a68-cf63-4b1a-9bc1-2c20793fd704'>Very Good Security - Junior Software Engineer</a></h5> 
 <p><span class="badge badge-light">Lviv, Ukraine</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -302,7 +311,7 @@ vida de milhares de usu?rios. Acreditamos em ambientes ?geis,?...</p>
 <p><span class="badge badge-light">West Hollywood</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/aid-driving/9d8505ce-96d2-42b4-9d83-52870536012a'>Autonomous Intelligent Driving GmbH - Security Architect ? Hardware & Embedded Systems</a></h5> 
+<h5><a href='https://jobs.lever.co/aid-driving/9d8505ce-96d2-42b4-9d83-52870536012a'>Autonomous Intelligent Driving GmbH - Security Architect ? Hardware & Embedded Systems</a></h5> 
 <p><span class="badge badge-light">Munich</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -326,7 +335,7 @@ vida de milhares de usu?rios. Acreditamos em ambientes ?geis,?...</p>
 <p><span class="badge badge-light">Toronto, Ontario</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qoZ9Vfwb&k=Job&j=oZ9cafwe&__jvst=Employee+Referral&__jvsd=seBixgwp&__jvsc=Twitter&bid=nXFRmMw6'>Imperva Careers - Cyber Security Engineer - Managed Services</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qoZ9Vfwb&k=Job&j=oZ9cafwe&__jvst=Employee+Referral&__jvsd=seBixgwp&__jvsc=Twitter&bid=nXFRmMw6'>Imperva Careers - Cyber Security Engineer - Managed Services</a></h5> 
 <p><span class="badge badge-light">Singapore, Singapore</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -402,7 +411,7 @@ vida de milhares de usu?rios. Acreditamos em ambientes ?geis,?...</p>
 <p><span class="badge badge-light">Orlando, FL, USA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999698140976-security-engineer-cloud-infrastructure'>4Catalyzer Security Engineer - Cloud Infrastructure | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999698140976-security-engineer-cloud-infrastructure'>4Catalyzer Security Engineer - Cloud Infrastructure | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -430,17 +439,9 @@ vida de milhares de usu?rios. Acreditamos em ambientes ?geis,?...</p>
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA, USA</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oyq0afwS&__jvst=Employee+Referral&__jvsd=sJHwDfwj&__jvsc=Twitter&bid=nQgylMwg'>ServiceNow Careers - Senior Security Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oyq0afwS&__jvst=Employee+Referral&__jvsd=sJHwDfwj&__jvsc=Twitter&bid=nQgylMwg'>ServiceNow Careers - Senior Security Analyst</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA, USA</span></p>
 <p>Posted on:: 2019-10-27</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qmr9VfwB&k=Job&j=ohHZafwR&__jvst=Tenable+Employee&__jvsd=s3pCGgwv&__jvsc=Twitter&bid=nKZylMwT'>Tenable Careers - Security Engineer</a></h5> 
-<p><span class="badge badge-light">Tokyo Tokyo</span></p>
-<p>Posted on:: 2019-10-27</p>
-<hr/>
-<h5><a href='https://frb.referrals.selectminds.com/jobs/information-security-analyst-i-ii-iii-10262'>Information Security Analyst I/II/III - The Federal Reserve System Careers</a></h5> 
-<p><span class="badge badge-light">Minnesota, Minneapolis  Minneapolis</span></p>
-<p>Posted on: 2019-10-27</p>
 <hr/>
 
 
