--- a/devops.html
+++ b/devops.html
@@ -221,7 +221,7 @@ internal IT operations. You will be completing tasks in support of our IT functi
 <p>Oct 15, 2019 ... The Continuous Integration/Continuous Delivery DevOps Engineer will join an 
 agile service team focused on daily production service delivery and application?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHV9Vfwq&k=Job&j=oQVLafwq&__jvst=Employee+Referral&__jvsd=shUBLhwj&__jvsc=Twitter&bid=nsZdoMwj'>Jobvite, Inc. Careers - Senior DevOps Tooling Engineer (remote)</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHV9Vfwq&k=Job&j=oQVLafwq&__jvst=Employee+Referral&__jvsd=shUBLhwj&__jvsc=Twitter&bid=nsZdoMwj'>Jobvite, Inc. Careers - Senior DevOps Tooling Engineer (remote)</a></h5> 
 <p><span class="badge badge-light">San Mateo, California</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -239,7 +239,7 @@ agile service team focused on daily production service delivery and application?
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/gitlab/jobs/4069426002'>Job Application for Backend Engineer- Configure(Kubernetes, Auto DevOps, ChatOps) at GitLab</a></h5> 
+<h5><a href='https://boards.greenhouse.io/gitlab/jobs/4069426002'>Job Application for Backend Engineer- Configure(Kubernetes, Auto DevOps, ChatOps) at GitLab</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -259,7 +259,7 @@ agile service team focused on daily production service delivery and application?
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://careers.jobscore.com/careers/dae/jobs/devops-engineer-mid-dXB4cG908r6Bk3aKiznY58'>DevOps Engineer - Mid #0585 job at Stratus Solutions in Fulton, MD, powered by JobScore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/dae/jobs/devops-engineer-mid-dXB4cG908r6Bk3aKiznY58'>DevOps Engineer - Mid #0585 job at Stratus Solutions in Fulton, MD, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">Fulton, MDFulton, MD</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -283,7 +283,7 @@ agile service team focused on daily production service delivery and application?
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/socure/13e60382-1ae2-48a0-ad77-984ac20f9a2a'>Socure - Senior DevOps Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/socure/13e60382-1ae2-48a0-ad77-984ac20f9a2a'>Socure - Senior DevOps Engineer</a></h5> 
 <p><span class="badge badge-light">NYC</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -299,7 +299,7 @@ agile service team focused on daily production service delivery and application?
 <p><span class="badge badge-light">Leeds, United Kingdom</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q0KaVfwz&k=Job&j=o9Qrbfwl&__jvst=Employee+Referral+&__jvsd=s2Lp2iw1&__jvsc=Twitter&bid=nmCUnMww'>Litera Microsystems Careers - DevOps Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q0KaVfwz&k=Job&j=o9Qrbfwl&__jvst=Employee+Referral+&__jvsd=s2Lp2iw1&__jvsc=Twitter&bid=nmCUnMww'>Litera Microsystems Careers - DevOps Engineer</a></h5> 
 <p><span class="badge badge-light">Chicago, Illinois</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -341,7 +341,7 @@ such as DevOps, SRE or Operations Engineer roles. Knowledge of Linux, nginx,
 <p><span class="badge badge-light">Montreal, QCCanada  Montreal Montreal</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698374583-administrateur-cloud-devops-cloud-ubisoft-'>Ubisoft Administrateur Cloud (Devops - Cloud Ubisoft) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698374583-administrateur-cloud-devops-cloud-ubisoft-'>Ubisoft Administrateur Cloud (Devops - Cloud Ubisoft) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -365,7 +365,7 @@ such as DevOps, SRE or Operations Engineer roles. Knowledge of Linux, nginx,
 <p><span class="badge badge-light">Chicago  Chicago  Chicago, Illinois</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://qustodio.recruitee.com/o/devops-team-lead'>
+<h5><a href='https://qustodio.recruitee.com/o/devops-team-lead'>
       DevOps Team Lead - Qustodio
     </a></h5> 
 <p><span class="badge badge-light">Barcelona, Spain  Barcelona</span></p>
@@ -395,11 +395,11 @@ such as DevOps, SRE or Operations Engineer roles. Knowledge of Linux, nginx,
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/quadient/job/oj4rbfwJ'>Quadient Careers - Ing?nieur Syst?me DevOps</a></h5> 
+<h5><a href='http://jobs.jobvite.com/quadient/job/oj4rbfwJ'>Quadient Careers - Ing?nieur Syst?me DevOps</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/cloudflare/jobs/1926931?gh_jid=1926931'>Job Application for DevOps Engineer at Cloudflare</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/cloudflare/jobs/1926931?gh_jid=1926931'>Job Application for DevOps Engineer at Cloudflare</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 21, 2019 ... 1.1.1.1: We released 1.1.1.1 to help fix the foundation of the Internet by building a 
 faster, more secure and privacy-centric public DNS resolver. This is available?...</p>
@@ -460,7 +460,7 @@ faster, more secure and privacy-centric public DNS resolver. This is available?.
 <p><span class="badge badge-light">Palo Alto Palo Alto Tel Aviv, Israel  Palo Alto</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
 
 <!--End body here -->
 
