--- a/software.html
+++ b/software.html
@@ -39,6 +39,18 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qnh9Vfws&k=Job&j=otjZafwF&__jvst=Employee+Referral&__jvsd=sUv5Pfw3&__jvsc=Twitter&bid=nBDnpMwh&jvi=otjZafwF,Job&jvk=Job'>Medidata Solutions Careers - Software Engineer - Data Pipeline Development</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-31</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZlaVfw9&k=Job&j=o98pbfwB&__jvst=Employee&__jvsd=s1A2Kgw8&__jvsc=Twitter&bid=nM6npMwV'>Benefitfocus Careers - Sr. Software Engineer - AI</a></h5> 
+<p><span class="badge badge-light">Charleston, South Carolina</span></p>
+<p>Posted on:: 2019-10-31</p>
+<hr/>
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oI1mafwZ&__jvst=Employee+Referral&__jvsd=soLEwfw3&__jvsc=Twitter&bid=n1anpMwe'>ServiceNow Careers - Software Architect (Distinguished Software Engineer) ? Data Integration</a></h5> 
+<p><span class="badge badge-light">San Diego, California  San Diego</span></p>
+<p>Posted on:: 2019-10-31</p>
+<hr/>
 <h5><a href='https://jobs.smartrecruiters.com/CERN/743999698313206-linux-kernel-software-developer-be-co-ht-2019-112-ld-?trid=33221b55-7baa-4189-992e-a7fac0c08950'>CERN Linux Kernel Software Developer (BE-CO-HT-2019-112-LD) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
@@ -55,7 +67,7 @@
 <p><span class="badge badge-light">Cambridge United States</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://akamaijobs.referrals.selectminds.com/jobs/front-end-software-engineer-12379'>Front-end Software Engineer - Akamai Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://akamaijobs.referrals.selectminds.com/jobs/front-end-software-engineer-12379'>Front-end Software Engineer - Akamai Careers</a></h5> 
 <p><span class="badge badge-light">Krakow, Poland</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -67,7 +79,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://careers.jobscore.com/careers/ariasystems/jobs/workflow-software-engineer-a-qo62KsGr6B57cR_n82lY'>Workflow Software Engineer #0193 job at Aria Systems in San Francisco, CA, powered by JobScore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/ariasystems/jobs/workflow-software-engineer-a-qo62KsGr6B57cR_n82lY'>Workflow Software Engineer #0193 job at Aria Systems in San Francisco, CA, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">San Francisco, CASan Francisco, CA San Francisco, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -75,11 +87,11 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/ariasystems/jobs/workflow-software-engineer-dcSCwKKsCr6ByyaICoXfFy'>Workflow Software Engineer #0191 job at Aria Systems in Iowa City, IA, powered by JobScore</a></h5> 
+<h5><a href='https://careers.jobscore.com/careers/ariasystems/jobs/workflow-software-engineer-dcSCwKKsCr6ByyaICoXfFy'>Workflow Software Engineer #0191 job at Aria Systems in Iowa City, IA, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oucM9fwl&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nyAlpMw9'>Guidewire Software, Inc. Careers - Senior Software Engineer -  San Mateo, CA</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oucM9fwl&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nyAlpMw9'>Guidewire Software, Inc. Careers - Senior Software Engineer -  San Mateo, CA</a></h5> 
 <p><span class="badge badge-light">San Mateo, CA  San Mateo, CA  San Mateo, California</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -189,11 +201,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999698322240-sr-software-engineer-for-leading-sportswear-client-'>Aroghia Group Sr. Software Engineer for Leading Sportswear Client! | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999698322240-sr-software-engineer-for-leading-sportswear-client-'>Aroghia Group Sr. Software Engineer for Leading Sportswear Client! | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Beaverton, OR, USA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999698322691-sr-software-engineer-for-global-sportswear-brand-no-c2c-only-w2-'>Aroghia Group Sr. Software Engineer for Global Sportswear Brand, no C2C & only W2. | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999698322691-sr-software-engineer-for-global-sportswear-brand-no-c2c-only-w2-'>Aroghia Group Sr. Software Engineer for Global Sportswear Brand, no C2C & only W2. | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Beaverton, OR, USA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -217,7 +229,7 @@
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/KMSTechnology1/743999698538807-fresher-devops-software-engineer'>KMS Technology FRESHER DEVOPS SOFTWARE ENGINEER | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/KMSTechnology1/743999698538807-fresher-devops-software-engineer'>KMS Technology FRESHER DEVOPS SOFTWARE ENGINEER | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -293,7 +305,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-intern---canada-1848934/?gh_src=82a8057f1'>Software Engineer Intern - Canada | Okta</a></h5> 
+<h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-intern---canada-1848934/?gh_src=82a8057f1'>Software Engineer Intern - Canada | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -373,7 +385,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/nextroll/jobs/4501202002'>Job Application for Senior Software Engineer, Full Stack - RollWorks at NextRoll</a></h5> 
+<h5><a href='https://boards.greenhouse.io/nextroll/jobs/4501202002'>Job Application for Senior Software Engineer, Full Stack - RollWorks at NextRoll</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -425,20 +437,8 @@
 <p><span class="badge badge-light">Chicago, Illinois</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Daxko1/743999698525762-senior-software-engineer'>Daxko Senior Software Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Daxko1/743999698525762-senior-software-engineer'>Daxko Senior Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Daxko1/743999698525794-senior-software-engineer'>Daxko Senior Software Engineer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/dataminr/jobs/1937488'>Job Application for Senior Software Engineer, Back End at Dataminr</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/dataminr/jobs/1937489'>Job Application for Senior Software Engineer, Back End at Dataminr</a></h5> 
-<p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 
